<resources>
    <string name="app_name">OrgApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Organización de Computadoras</string>
    <string name="nav_header_subtitle">Verificación de Ejercicios</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sm">SM</string>
    <string name="drc">DRC</string>
    <string name="rc">RC</string>
    <string name="lrc_vrc">LRC y VRC</string>
    <string name="generar_crc">Generar CRC</string>
    <string name="verificar_crc">Verificar CRC</string>
    <string name="generar_hamming">Generar código Hamming</string>
    <string name="verificar_hamming">Verificar código Hamming</string>
    <string name="deteccion_y_correcion_de_errores">Detección y corrección de Errores</string>
    <string name="cambio_de_base">Cambio de Base</string>
    <string name="num_x">Numero X</string>
    <string name="num_y">Numero Y</string>
    <string name="operaciones_aritmeticas">Operaciones Aritméticas</string>
    <string name="sistemas_de_representacion">Sistemas de Representación</string>
    <string name="aritmetica">Aritmética</string>

    <string name="generar_rangos">Generador de Rangos</string>

    <string name="cuerpo_ayuda_generar_rangos">* Ingrese la cantidad de bits disponibles y se le mostrará los diferentes
    rangos con su correspondiente sistema de representacion.\n* La cantidad de bits disponibles tendra que ser mayor a dos.\n</string>

    <string-array name="arraySpinner">
        <item>BIN</item>
        <item>OCT</item>
        <item>DEC</item>
        <item>HEX</item>
    </string-array>

    <string-array name="arraySpinnerSistemasDeRepresentacion">
        <item>SM</item>
        <item>DRC</item>
        <item>RC</item>
    </string-array>

    <string-array name="arraySpinnerHamming">
        <item>Hamming 3</item>
        <item>Hamming 4</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="numero_a_convertir">Número a convertir</string>

    <string name="bin">BIN</string>
    <string name="oct">OCT</string>
    <string name="hex">HEX</string>
    <string name="dec">DEC</string>
    <string name="resultado">RESULTADO</string>

    <string name="texto_ayuda">* Aquí podrá encontrar la información necesaria para utilizar esta
        aplicación.\n</string>

    <string name="texto_ayuda_cambio_de_base">* Seleccione la base de origen e ingrese el número no
        signado a convertir, ya sea entero o fraccionario. Podrá visualizar el número convertido en
        las demás bases.\n
    </string>

    <string name="texto_ayuda_sistemas_de_representacion">* Seleccione la base de origen y el sistema
        de representación en la cual desea ingresar el número a convertir. La aplicación solo
        convierte números enteros. Podrá visualizar el número en las diferentes representaciones\n
    </string>

    <string name="texto_ayuda_operaciones_aritmeticas">* Seleccione la base de origen y el sistema de
        representación en el cual desea realizar la operacion e ingrese los operandos.\n* Ambos
        operandos deben ser de igual longitud.\n* En caso de producirse overflow, se le notificará.\n*
        Los operandos deberán empezar con su respectivo bit de signo , respetando su sistema de representacion.\n
    </string>

    <string name="texto_ayuda_redondeo">* Ingrese un número binario y los dígitos de precisión, luego
        presione el botón "Redondear". Se le mostrará el número resultante utilizando los distintos
        redondeos.\n
    </string>

    <string name="texto_ayuda_rangos">* Ingrese la cantidad de bits y presione el boton "Calcular",
        se le mostrarán los rangos corresponientes a cada sistema de representación.
    </string>

    <string name="texto_ayuda_generar_crc">* Ingrese el mensaje a transmitir y el polinomio generador
        a utilizar, luego presione el boton "Calcular CRC" y se le mostrará el mensaje a transmitir.
        \n* Los bits de redundancia serán mostrados en un color distinto.\n
    </string>

    <string name="texto_ayuda_verificar_crc">* Ingrese el mensaje recibido y el polinomio generador
        a utilizar, luego presione el botón "Verificar" y se le mostrará si el mensaje fue recibido
        correctamente.\n
    </string>

    <string name="texto_ayuda_generar_hamming">* Ingrese los bits de datos a transmitir y se le mostrará su
        codificación tanto en Hamming básico como extendido.\n
    </string>

    <string name="texto_ayuda_verificar_hamming">* Ingrese los bits del paquete recibido y se le mostrará
        si fue recibido correctamente o con error de acuerdo a las políticas detalladas.\n
    </string>

    <string name="informacion_inicio">Esta aplicación fue diseñada como parte del final de TDP -
        2018.\n\nDesarrolladores:\nTomás Scandalitta\nMaximiliano Montenegro\nHorus Moro
    </string>

    <string name="contacto">
        Si encontrás una falla y/o querés enviar una sugerencia o crítica, contactanos a unsorgapp@gmail.com
    </string>

    <string name="par">Par</string>
    <string name="impar">Impar</string>
    <string name="calcular">calcular</string>
    <string name="mensaje_a_transmitir_hamming_3">Mensaje a transmitir Hamming 3:</string>
    <string name="mensaje_a_transmitir_hamming_4">Mensaje a transmitir Hamming 4:</string>
    <string name="mensaje_a_transmitir">Mensaje a transmitir:</string>
    <string name="calcular_crc">Calcular CRC</string>
    <string name="mensaje">Mensaje</string>
    <string name="generador">Generador</string>
    <string name="informacion_y_ayuda">Información y ayuda</string>
    <string name="verificar">verificar</string>
    <string name="mensaje_recibido">Mensaje recibido</string>
    <string name="redondeo">Redondeo</string>
    <string name="numero">Número</string>
    <string name="precision">Precisión</string>
    <string name="redondear">Redondear</string>
    <string name="tema_oscuro">Tema oscuro</string>

</resources>
