<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SistemasDeRepresentacion.SistemasDeRepresentacionFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="110dp"
            android:layout_height="46dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtNroConvertido1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.418"
            app:layout_constraintStart_toEndOf="@+id/txtNumeroIngresado"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/txtNumeroIngresado"
            android:layout_width="201dp"
            android:layout_height="43dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:hint="@string/numero_a_convertir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtNroConvertido1"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.645"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNumeroIngresado" />

        <EditText
            android:id="@+id/txtNroConvertido2"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.645"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNroConvertido1" />

        <EditText
            android:id="@+id/txtNroConvertido3"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"

            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.645"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNroConvertido2" />

        <TextView
            android:id="@+id/txtBase1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="200dp"
            android:text="@string/dec"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/txtNroConvertido1"
            app:layout_constraintHorizontal_bias="0.413"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBase2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/oct"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/txtNroConvertido2"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBase1" />

        <TextView
            android:id="@+id/txtBase3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:text="@string/hex"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/txtNroConvertido3"
            app:layout_constraintHorizontal_bias="0.413"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBase2" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>